fixed teaser text alignment

--- a/src/operun/frontpage/browser/static/frontpage-compiled.css
+++ b/src/operun/frontpage/browser/static/frontpage-compiled.css
@@ -35,7 +35,7 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 .teaser-text {
   position: absolute;
   right: 30px;
-  bottom: 0;
+  bottom: 20px;
   left: 30px;
   color: #fff;
 }
@@ -49,7 +49,7 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 80px;
+  height: 120px;
   opacity: .5;
   background-color: #000000;
 }
