--- a/src/operun/frontpage/browser/static/frontpage.less
+++ b/src/operun/frontpage/browser/static/frontpage.less
@@ -43,7 +43,7 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 .teaser-text {
   position: absolute;
   right: 30px;
-  bottom: 0;
+  bottom: 20px;
   left: 30px;
   color: #fff;
 }
@@ -59,7 +59,7 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 80px;
+  height: 120px;
   opacity: .5;
   background-color: rgb(0, 0, 0);
 }
